--- a/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
+++ b/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
@@ -22,12 +22,12 @@
                 text-decoration: none
                 color: grey
 
-    .header
+    .main-header
         height: 6rem
-        margin-top: 1rem
-        width: 99vw
+        &__logo-img
+            width: 30%
 
-        .header-actions
+        &-actions
             justify-content: space-between
             width: 70%
             &__query
