--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -8,7 +8,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<header>
+		<header class="header">
 			<nav class="header-alt-nav">
 				<section class="header-alt-nav__brands">
 					<figure>
@@ -31,22 +31,22 @@
 					<a href=""><i class="fas fa-map-marker-alt"><span> Espana</span></i></a>
 				</section>
 			</nav>
-			<section class="header">
-				<figure class="header__logo">
-					<img src="https://www.iconsdb.com/icons/preview/black/nike-xxl.png" alt="">
+			<section class="main-header">
+				<figure class="main-header__logo-container">
+					<img class="main-header__logo-img" src="https://www.iconsdb.com/icons/preview/black/nike-xxl.png" alt="">
 				</figure>
-				<section class="header-actions">
+				<section class="main-header-actions">
 					<input
-						class="header-actions__query"
+						class="main-header-actions__query"
 						type="text"
 					/>
-					<button class="header-actions__query-btn"><i class="fas fa-search"></i></button>
-					<button class="header-actions__cart">
+					<button class="main-header-actions__query-btn"><i class="fas fa-search"></i></button>
+					<button class="main-header-actions__cart">
 						<i class="fas fa-shopping-cart"></i>
 					</button>
-					<nav class="header-actions__nav-container">
-						<button class="header-actions__nav-button"><i class="fas fa-bars"></i></button>
-						<ul class="header-actions__nav">
+					<nav class="main-header-actions__nav-container">
+						<button class="main-header-actions__nav-button"><i class="fas fa-bars"></i></button>
+						<ul class="main-header-actions__nav">
 							<li>NOVEDADES</li>
 							<li>HOMBRE</li>
 							<li>MUJER</li>
