--- a/staff/lisandro-bertoli/templates/nike/components/header.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/header.sass
@@ -1,4 +1,4 @@
-.header
+.main-header
 
     display: flex
     justify-content: space-between
@@ -6,18 +6,16 @@
     height: 4.5rem
     border-bottom: 0.3px solid lightgrey
 
-    &__logo
-        width: 10rem
-        margin: 0 1rem
-        & > img
-            margin: 0 2rem
-            height: 4.8rem
-            width: 5rem
+    &__logo-container
+        width: 15%
+    &__logo-img
+        margin: 0 2rem
+        width: 100%
 
-    .header-actions
+    &-actions
         display: flex
-        justify-content: space-around
-        width: 12rem
+        justify-content: space-evenly
+        width: 50%
 
         &__query, &__nav
             display: none
