update sass folder in Nike Project

--- a/staff/victori-murillo/templates/nike/sass/components/_sneaker.sass
+++ b/staff/victori-murillo/templates/nike/sass/components/_sneaker.sass
@@ -1,4 +1,4 @@
-@import ../utils/_functions
+@import ../utils/_mixins
   
 .sneaker
   +width-height-margin(49%, 40vh, 5px, 0px)   
@@ -14,9 +14,7 @@
   &__text
     text-align: left
     color: gray
-    margin: 3px
-    margin-left: 10px
-
+    margin: 3px 3px 3px 10px
 
 @media (min-width: 692px)
   .sneaker
