--- a/staff/victori-murillo/templates/nike/results.html
+++ b/staff/victori-murillo/templates/nike/results.html
@@ -178,7 +178,7 @@
           </div>
           <div class="sneaker">
             <img
-              class="sneaker__photo sneaker__photo--circle"
+              class="sneaker__photo"
               src="https://c.static-nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/da73da6a-c31d-463b-80b5-462d79977aec/air-max-90-zapatillas-nino-a-J4kW6R.jpg"
               alt="">
             <h4 class="sneaker__title" >Nike Air Max 90</h4>
