--- a/staff/ramon-palao/templates/nike/grid.sass
+++ b/staff/ramon-palao/templates/nike/grid.sass
@@ -9,3 +9,9 @@
         display: grid
         grid-template: repeat(4, 1fr) / repeat(3, 1fr)
         grid-gap: 3vh
+    
+    %flex-desktop
+        display: flex
+        _flex-direction: row
+        _justify-content: flex-end
+        flex-flow: wrap
