--- a/staff/ramon-palao/templates/nike/results.html
+++ b/staff/ramon-palao/templates/nike/results.html
@@ -43,77 +43,81 @@
             <a class="nav-type__option">Sport (17)</a>
             <a class="nav-type__option">Mountain (3)</a>
         </nav>
-        <section class="main-grid">
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="main-grid__display">
-                <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
-                <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-        </section>
-        <section class="categorias">
-            <nav class="nav-left">
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-                <a class="nav-left__category">CATEGORY</a>
-            </nav>  
+        <section class="main-gridprueba">
+            <section class="categorias">
+                <nav class="nav-left">
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                    <a class="nav-left__category">CATEGORY</a>
+                </nav>  
+            </section>
+            <section class="main-grid">
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+                <figure class="main-grid__display">
+                    <img class="main-grid__picture" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="Search result">
+                    <figcaption class="main-grid__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</figcaption>
+                </figure>
+            </section>
+            
+    
         </section>
     </main>
     <footer>
