--- a/staff/ramon-palao/templates/nike/nav.sass
+++ b/staff/ramon-palao/templates/nike/nav.sass
@@ -30,6 +30,9 @@
 .nav-left
     display: none
 
+.categorias
+    display: none
+
 @media only screen and (min-width: 1024px)
 
     .nav-desktop
@@ -77,12 +80,20 @@
         flex-direction: column
     
     .main-grid
-        @extend %grid-desktop
-        margin: 10vh 10vh 10vh 35vh
+        @extend %flex-desktop
+        _margin: 10vh 10vh 10vh 15vh
+        box-sizing: border-box
 
         &__picture
-            width: 100%
-            height: 50vh
+            _width: 100%
+            _height: 45vh 
+            max-height: 100vh
+            max-width: 45vh
+            margin: 3vh
+        
+        &__info
+            max-width: 45vh
+            margin: 3vh
 
             
             
