--- a/staff/ramon-palao/templates/nike/style.css
+++ b/staff/ramon-palao/templates/nike/style.css
@@ -33,6 +33,10 @@
   display: none;
 }
 
+.categorias {
+  display: none;
+}
+
 @media only screen and (min-width: 1024px) {
   .nav-desktop {
     display: flex;
@@ -82,11 +86,19 @@
   }
 
   .main-grid {
-    margin: 10vh 10vh 10vh 35vh;
+    _margin: 10vh 10vh 10vh 15vh;
+    box-sizing: border-box;
   }
   .main-grid__picture {
-    width: 100%;
-    height: 50vh;
+    _width: 100%;
+    _height: 45vh;
+    max-height: 100vh;
+    max-width: 45vh;
+    margin: 3vh;
+  }
+  .main-grid__info {
+    max-width: 45vh;
+    margin: 3vh;
   }
 }
 .title {
@@ -140,9 +152,10 @@
 
 @media only screen and (min-width: 1024px) {
   .main-grid {
-    display: grid;
-    grid-template: repeat(4, 1fr)/repeat(3, 1fr);
-    grid-gap: 3vh;
+    display: flex;
+    _flex-direction: row;
+    _justify-content: flex-end;
+    flex-flow: wrap;
   }
 }
 .main-grid__picture {
