upload new changes in nike files

--- a/staff/ramon-palao/templates/nike/nav.sass
+++ b/staff/ramon-palao/templates/nike/nav.sass
@@ -95,5 +95,10 @@
             max-width: 45vh
             margin: 3vh
 
+.categorias
+    display: flex
+    flex-direction: column
+    width: 10%
+
             
             
