--- a/staff/ramon-palao/templates/nike/style.css
+++ b/staff/ramon-palao/templates/nike/style.css
@@ -101,6 +101,12 @@
     margin: 3vh;
   }
 }
+.categorias {
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+}
+
 .title {
   padding: 2vh;
   height: 10vh;
