--- a/staff/ramon-palao/templates/nike/nav.sass
+++ b/staff/ramon-palao/templates/nike/nav.sass
@@ -79,26 +79,30 @@
         display: flex
         flex-direction: column
     
-    .main-grid
-        @extend %flex-desktop
+    .main-gridprueba
+        display: grid
+        grid-template-columns: 1fr 1fr 1fr 1fr
+        grid-template-rows: 1fr 1fr
+        _width: 100%
+        _justify-content: space-around
         _margin: 10vh 10vh 10vh 15vh
         box-sizing: border-box
 
-        &__picture
+    .main-grid__picture
             _width: 100%
             _height: 45vh 
-            max-height: 100vh
-            max-width: 45vh
+            max-height: 90vh
+            max-width: 35vh
             margin: 3vh
         
-        &__info
-            max-width: 45vh
+    .main-grid__info
+            max-width: 35vh
             margin: 3vh
 
 .categorias
     display: flex
     flex-direction: column
-    width: 10%
+    _width: 10%
 
             
             
