--- a/staff/ramon-palao/templates/nike/style.css
+++ b/staff/ramon-palao/templates/nike/style.css
@@ -85,26 +85,33 @@
     flex-direction: column;
   }
 
-  .main-grid {
+  .main-gridprueba {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    _width: 100%;
+    _justify-content: space-around;
     _margin: 10vh 10vh 10vh 15vh;
     box-sizing: border-box;
   }
+
   .main-grid__picture {
     _width: 100%;
     _height: 45vh;
-    max-height: 100vh;
-    max-width: 45vh;
+    max-height: 90vh;
+    max-width: 35vh;
     margin: 3vh;
   }
+
   .main-grid__info {
-    max-width: 45vh;
+    max-width: 35vh;
     margin: 3vh;
   }
 }
 .categorias {
   display: flex;
   flex-direction: column;
-  width: 10%;
+  _width: 10%;
 }
 
 .title {
@@ -156,14 +163,6 @@
   grid-gap: 1px;
 }
 
-@media only screen and (min-width: 1024px) {
-  .main-grid {
-    display: flex;
-    _flex-direction: row;
-    _justify-content: flex-end;
-    flex-flow: wrap;
-  }
-}
 .main-grid__picture {
   width: 100%;
   height: 21vh;
