new modifications to nike project

--- a/staff/federico-lacabaratz/templates/nike/results.html
+++ b/staff/federico-lacabaratz/templates/nike/results.html
@@ -18,11 +18,11 @@
             <span><i class="fas fa-shopping-cart iconbanner"></i></span>
             <span><i class="fas fa-bars iconbanner"></i></span>
         </section>
-        <section class="header__containerC">
-            <span class="header__containerC__sepbar"></span>
+        <section class="bottom__margin">
+            <span></span>
         </section>
     </header>
-    <main>
+    <main class="main__container">
         <section class="resultSearch__container1">
             <span class="resultSearch__containerA">Resultados para "zapatillas"</span>
             <span><i class="fas fa-sliders-h iconfilter"></i></span>
