upload new changes in nike template

--- a/staff/ramon-palao/templates/nike/nav.sass
+++ b/staff/ramon-palao/templates/nike/nav.sass
@@ -79,10 +79,16 @@
         display: flex
         flex-direction: column
     
+    // .aside-upper
+    //     width: 100%
+
+    // .title
+    //     width: 100%
+    
     .main-gridprueba
         display: grid
-        grid-template-columns: 1fr 1fr 1fr 1fr
-        grid-template-rows: 1fr 1fr
+        grid-template-columns: 1fr 3fr
+        grid-template-rows: 1fr 1fr 1fr
         _width: 100%
         _justify-content: space-around
         _margin: 10vh 10vh 10vh 15vh
@@ -92,16 +98,17 @@
             _width: 100%
             _height: 45vh 
             max-height: 90vh
-            max-width: 35vh
+            max-width: 50vh
             margin: 3vh
         
     .main-grid__info
-            max-width: 35vh
+            max-width: 50vh
             margin: 3vh
 
 .categorias
     display: flex
     flex-direction: column
+    margin-top: 10vh
     _width: 10%
 
             
