--- a/staff/ramon-palao/templates/nike/header-title.sass
+++ b/staff/ramon-palao/templates/nike/header-title.sass
@@ -31,6 +31,9 @@
         top: 17vh
         width: 100%
 
+        &__result
+            _width: 100%
+
     .aside-upper
         display: inline-block
         height: 10vh
