--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
@@ -1,26 +1,24 @@
 @import components/menu
+@import components/login
+@import components/register
+@import components/search
 *
     padding: 0
-    margin: 0
-    -webkit-box-sizing: border-box
-    -moz-box-sizing: border-box
-    box-sizing: border-box
+    margin-top: 5px
+    margin-left: 5px
+    margin-bottom: 5px
+    margin-right: 5px
+    background-color: #2c7873
 body
-    width: 100vw
-    height: 100vh
-    background-color: SLATEGRAY
-.login, .register, .search, .item, .settings, .details
-    border: 1px solid black
-    border-radius: 20px
+    // border: 3px solid #EF9F1B
+    // border-radius: 20px
+    width: 94vw
+    height: 96vh
 
 %logo
-    width: 100%
-    padding: 4rem
+    width: 65%
+    padding: 3rem
 
-
-.login
-    &__logo
-        @extend %logo
 
 .register
     &__logo
