--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -99,8 +99,34 @@
 .search > input {
   grid-area: i;
 }
-.search > button {
+.search > fa- {
   grid-area: b;
+}
+
+.results {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.item figure {
+  display: flex;
+  flex-direction: column;
+}
+.item img {
+  align-self: center;
+  height: 80%;
+  width: 40%;
+}
+.item > h2 {
+  padding: 2px;
+  text-align: center;
+  background-color: #66CDAA;
 }
 
 * {
@@ -110,11 +136,6 @@
   margin-bottom: 5px;
   margin-right: 5px;
   background-color: #2c7873;
-}
-
-body {
-  width: 94vw;
-  height: 96vh;
 }
 
 .login__logo, .register__logo {
@@ -133,15 +154,6 @@ body {
   width: 7rem;
   height: auto;
   padding: 1rem;
-}
-
-.item {
-  width: 100%;
-  height: 100%;
-}
-.item img {
-  width: 7rem;
-  max-width: 100%;
 }
 
 h2 {
