--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
@@ -2,6 +2,8 @@
 @import components/login
 @import components/register
 @import components/search
+@import components/results
+@import components/item
 *
     padding: 0
     margin-top: 5px
@@ -12,8 +14,8 @@
 body
     // border: 3px solid #EF9F1B
     // border-radius: 20px
-    width: 94vw
-    height: 96vh
+    // width: 94vw
+    // height: 96vh
 
 %logo
     width: 65%
@@ -35,11 +37,5 @@ body
        width: 7rem
        height: auto
        padding: 1rem
-.item 
-    width: 100%
-    height: 100%
-    img
-        width: 7rem
-        max-width: 100%
 h2
     font-family: 'Permanent Marker', cursive
