--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/item.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/item.sass
@@ -2,6 +2,9 @@
     display: flex
     justify-content: center
     flex-direction: column
+    width: 100%
+
+
     & figure
         display: flex
         flex-direction: column
@@ -13,5 +16,5 @@
         padding: 2px
         text-align: center
         background-color: #66CDAA
-    
+
 
