--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/results.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/results.sass
@@ -1,5 +1,7 @@
 .results
     display: flex
-    // flex-direction: column
+    flex-direction: row
     justify-content: center
     flex-wrap: wrap
+    border: 2px solid #EF9F1B
+    width: 100%
