--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
@@ -2,21 +2,35 @@
     display: flex
     flex-direction: column
     justify-content: center
+    align-items: center
+    background-color: #2c7873
     &__logo
-        @extend %logo
+        max-width: 18rem
         border-bottom: 2px solid #EF9F1B
-    & >h2
+        margin-top: 5rem
+        padding-bottom: 1rem
+        margin-bottom: 1rem
+    
+    &__title
         text-align: center
-    & >input
+    &__input
         text-align: center
         background-color: white
         height: 30px
-        width: 95%
+        width: 72%
         border-radius: 15px
-    & >button
+        justify-items: center
+        margin: 0.5rem auto
+    &__submit
+        margin: 1rem
         background-color: #EF9F1B
-        height: 30px
-        width: 95%
         border-radius: 15px
-    & >a
+        border: none
+        display: inline-block
+        font-size: 16px
+        cursor: pointer
+        height: 30px
+        width: 72%
+        margin: 0.5rem auto
+    &__login
         text-align: center
