--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
@@ -1,11 +1,70 @@
 .search
-    display: grid
-    grid-template-areas: 'l h h''l i b'
+    display: flex
+    flex-direction: column
+    &__header
+        display: flex
+        flex-direction: row
+        padding: 0.5rem
+        border-bottom: 2px solid #EF9F1B
+        background-image: url(img/beer.jpg)
+        margin-top: 0.5rem
     &__logo
-        grid-area: l
-    & > h3
-        grid-area: h
-    & > input
-        grid-area: i
-    & > fa-
-        grid-area: b 
+        width: 22%
+        margin-left: 0.4rem
+        margin-top:0.5rem
+    &__title
+        margin-top: 1rem
+        align-items: center
+    &__user
+        margin-top: 2rem
+        font-family: 'Permanent Marker', cursive
+    &__ranking
+        width: 15%
+        height: 15%
+        margin-top: 1rem
+        margin-right: 1rem
+    &__lock
+        align-items: flex-end
+        margin-top: 2.3rem
+        color: #EF9F1B
+        margin-left: 5rem
+        margin-left: 9rem
+    &__menu
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+        margin-top: 0.5rem
+        margin-bottom: 1rem
+    &__hamburguer
+        color: #EF9F1B
+    &__favList
+        background-color: transparent
+    &__searching
+        color: #EF9F1B
+    &__query
+        color: #EF9F1B
+       
+
+//     &__header
+//         display: flex
+//         align-items: center
+//     figure
+//         flex: 1
+
+//     &__logo
+//        width: 7rem
+//        height: auto
+//        padding: 1rem
+//        grid-area: l    
+//     & > h3
+//         grid-area: h
+//     & > input
+//         grid-area: i
+//     & > fa-
+//         grid-area: b 
+//     h3
+//         text-align: end
+//         margin: 0 2rem
+
+// h2
+//     font-family: 'Permanent Marker', cursive
