--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -34,27 +34,41 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-color: #2c7873;
 }
 .login__logo {
+  max-width: 18rem;
   border-bottom: 2px solid #EF9F1B;
+  margin-top: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
-.login > h2 {
+.login__title {
   text-align: center;
 }
-.login > input {
+.login__input {
   text-align: center;
   background-color: white;
   height: 30px;
-  width: 95%;
+  width: 72%;
   border-radius: 15px;
+  justify-items: center;
+  margin: 0.5rem auto;
 }
-.login > button {
+.login__submit {
+  margin: 1rem;
   background-color: #EF9F1B;
-  height: 30px;
-  width: 95%;
   border-radius: 15px;
+  border: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  height: 30px;
+  width: 72%;
+  margin: 0.5rem auto;
 }
-.login > a {
+.login__login {
   text-align: center;
 }
 
@@ -62,57 +76,116 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-color: #2c7873;
 }
 .register__logo {
+  max-width: 18rem;
   border-bottom: 2px solid #EF9F1B;
+  margin-top: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
-.register > h2 {
+.register__title {
   text-align: center;
 }
-.register > input {
+.register__input {
   text-align: center;
   background-color: white;
   height: 30px;
-  width: 95%;
+  width: 72%;
   border-radius: 15px;
+  justify-items: center;
+  margin: 0.5rem auto;
 }
-.register > button {
+.register__submit {
+  margin: 1rem;
   background-color: #EF9F1B;
-  height: 30px;
-  width: 95%;
   border-radius: 15px;
+  border: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  height: 30px;
+  width: 72%;
+  margin: 0.5rem auto;
 }
-.register > a {
+.register__login {
   text-align: center;
 }
 
 .search {
-  display: grid;
-  grid-template-areas: "l h h" "l i b";
+  display: flex;
+  flex-direction: column;
+}
+.search__header {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem;
+  border-bottom: 2px solid #EF9F1B;
+  background-image: url(img/beer2.jpg);
+  margin-top: 0.5rem;
 }
 .search__logo {
-  grid-area: l;
+  width: 22%;
+  margin-left: 0.4rem;
+  margin-top: 0.5rem;
 }
-.search > h3 {
-  grid-area: h;
+.search__title {
+  margin-top: 1rem;
+  align-items: center;
 }
-.search > input {
-  grid-area: i;
+.search__user {
+  margin-top: 2rem;
+  font-family: "Permanent Marker", cursive;
 }
-.search > fa- {
-  grid-area: b;
+.search__ranking {
+  width: 15%;
+  height: 15%;
+  margin-top: 1rem;
+  margin-right: 1rem;
+}
+.search__lock {
+  align-items: flex-end;
+  margin-top: 2.3rem;
+  color: #EF9F1B;
+  margin-left: 5rem;
+  margin-left: 9rem;
+}
+.search__menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+.search__hamburguer {
+  color: #EF9F1B;
+}
+.search__favList {
+  background-color: transparent;
+}
+.search__searching {
+  color: #EF9F1B;
+}
+.search__query {
+  color: #EF9F1B;
 }
 
 .results {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  border: 2px solid #EF9F1B;
+  width: 100%;
 }
 
 .item {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
 }
 .item figure {
   display: flex;
@@ -129,31 +202,27 @@
   background-color: #66CDAA;
 }
 
-* {
-  padding: 0;
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-bottom: 5px;
-  margin-right: 5px;
-  background-color: #2c7873;
-}
-
-.login__logo, .register__logo {
-  width: 65%;
-  padding: 3rem;
-}
-
-.search__header {
+.detail {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  align-content: center;
+  font-size: 1.5em;
+  text-align: center;
 }
-.search figure {
-  flex: 1;
+
+* {
+  margin: 0;
 }
-.search__logo {
-  width: 7rem;
-  height: auto;
-  padding: 1rem;
+
+ul {
+  padding-inline-start: 0px;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: #2c7873;
 }
 
 h2 {
