--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
@@ -4,38 +4,24 @@
 @import components/search
 @import components/results
 @import components/item
+@import components/detail
+
 *
-    padding: 0
-    margin-top: 5px
-    margin-left: 5px
-    margin-bottom: 5px
-    margin-right: 5px
-    background-color: #2c7873
-body
-    // border: 3px solid #EF9F1B
-    // border-radius: 20px
-    // width: 94vw
-    // height: 96vh
-
-%logo
-    width: 65%
-    padding: 3rem
+    margin: 0
+ul
+    padding-inline-start: 0px
 
 
-.register
-    &__logo
-        @extend %logo
+body   
+    width: 100vw
+    height: 100vh
+    background-color: #2c7873 
 
-.search
-    &__header
-        display: flex
-        align-items: center
-    figure
-        flex: 1
 
-    &__logo
-       width: 7rem
-       height: auto
-       padding: 1rem
+
+
+
+
 h2
     font-family: 'Permanent Marker', cursive
+
