--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -123,7 +123,7 @@
   flex-direction: row;
   padding: 0.5rem;
   border-bottom: 2px solid #EF9F1B;
-  background-image: url(img/beer2.jpg);
+  background-image: url(img/beer.jpg);
   margin-top: 0.5rem;
 }
 .search__logo {
