--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -183,25 +183,52 @@
 
 .item {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
-  width: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  width: 80%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
-.item figure {
+.item__img-beer {
   display: flex;
   flex-direction: column;
-}
-.item img {
   align-self: center;
-  height: 80%;
-  width: 40%;
+}
+.item__img-beer > img {
+  width: 25%;
+  align-self: center;
+}
+.item__img-beer > figcaption {
+  align-self: center;
+  font-size: 23px;
+  margin: 10px;
+  padding: 10px;
+  color: black;
+  border-radius: 20px;
+}
+.item__beer-of-the-day > img {
+  display: none;
 }
 .item > h2 {
+  display: flex;
   padding: 2px;
   text-align: center;
-  background-color: #66CDAA;
+  border-bottom: 3px solid #EF9F1B;
+  justify-content: space-between;
+  padding-left: 25px;
+}
+.item > h3 {
+  text-align: center;
 }
 
+@media only screen and (min-width: 600px) {
+  .item {
+    margin: 30px;
+    width: 20%;
+  }
+}
 .detail {
   display: flex;
   flex-direction: column;
