search stile working progres

--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
@@ -1,13 +1,13 @@
 .search
     display: flex
     flex-direction: column
+    background-color: #0a070242
     &__header
         display: flex
         flex-direction: row
         padding: 0.5rem
-        border-bottom: 2px solid #EF9F1B
-        background-image: url(img/beer.jpg)
-        margin-top: 0.5rem
+        //border-bottom: 2px solid #EF9F1B
+        //margin-top: 0.5rem
     &__logo
         width: 22%
         margin-left: 0.4rem
@@ -35,6 +35,7 @@
         justify-content: space-around
         margin-top: 0.5rem
         margin-bottom: 1rem
+        position: sticky
     &__hamburguer
         color: #EF9F1B
     &__favList
