--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -117,15 +117,25 @@
 .search {
   display: flex;
   flex-direction: column;
-  background-color: #0a070242;
+  top: 0;
+  position: sticky;
+  height: 10%;
+  justify-content: space-between;
+}
+.search__userholder {
+  display: flex;
+  width: 140vw;
 }
 .search__header {
+  background-color: #1E4F4B;
   display: flex;
   flex-direction: row;
-  padding: 0.5rem;
+  padding-bottom: 2px;
+  padding-right: 35px;
+  justify-content: space-between;
 }
 .search__logo {
-  width: 22%;
+  width: 35%;
   margin-left: 0.4rem;
   margin-top: 0.5rem;
 }
@@ -136,27 +146,29 @@
 .search__user {
   margin-top: 2rem;
   font-family: "Permanent Marker", cursive;
+  margin-right: 10px;
 }
 .search__ranking {
-  width: 15%;
-  height: 15%;
+  width: 40%;
+  height: 60%;
   margin-top: 1rem;
   margin-right: 1rem;
 }
 .search__lock {
   align-items: flex-end;
   margin-top: 2.3rem;
+  margin-right: 10px;
   color: #EF9F1B;
-  margin-left: 5rem;
-  margin-left: 9rem;
 }
 .search__menu {
+  background-color: #2C7873;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  position: sticky;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+  height: 25px;
+  border-bottom: 2px solid #EF9F1B;
 }
 .search__hamburguer {
   color: #EF9F1B;
@@ -166,17 +178,75 @@
 }
 .search__searching {
   color: #EF9F1B;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .search__query {
-  color: #EF9F1B;
+  color: black;
+  border-radius: 20px;
+  border: 0;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.search button {
+  border: 0;
+  background-color: transparent;
+}
+.search button > i {
+  background-color: transparent;
+}
+.search .feedback {
+  color: #d45b46;
+  text-align: center;
+  font-size: 20px;
 }
 
+@media only screen and (min-width: 600px) {
+  .search {
+    height: 15vh;
+    margin-bottom: 20px;
+  }
+  .search__logo {
+    display: none;
+  }
+  .search__header {
+    height: 5vh;
+  }
+  .search__ranking {
+    width: 20%;
+    height: 90%;
+    margin-top: 2px;
+    padding-bottom: 20px;
+  }
+  .search__look {
+    margin-left: 200px;
+    margin-top: 10px;
+    font-size: 50px;
+  }
+  .search__userholder {
+    display: flex;
+    width: 20%;
+    justify-content: space-around;
+  }
+  .search__user {
+    margin-top: 10px;
+    font-size: 30px;
+  }
+  .search__menu {
+    height: 20vh;
+  }
+  .search > i {
+    font-size: 50px;
+  }
+  .search__query {
+    height: 3vh;
+    width: 30vw;
+  }
+}
 .results {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  border: 2px solid #EF9F1B;
   width: 100%;
 }
 
@@ -226,6 +296,9 @@
   .item {
     margin: 30px;
     width: 20%;
+  }
+  .item img {
+    width: 25%;
   }
 }
 .detail {
