--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/detail.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/detail.sass
@@ -1,8 +1,71 @@
 .detail
     display: flex
     flex-direction: column
-    align-items: center
+    justify-items: center
     align-content: center
     font-size: 1.5em
     text-align: center
- 
+    background-color: #8ec5a6
+    border-radius: 20px
+    overflow: none
+    margin-top: 0
+    margin-bottom:0
+    // margin-left: 1rem
+    // margin-rigth: 1rem
+    width: 100vw
+    font-family: "Indie Flower", cursive
+
+    h4
+        font-size: 23px
+        font-family: 'Satisfy', cursive
+    p
+        font-size: 18px
+    span
+        font-size: 18px
+    ul
+        font-size:20px
+    li
+        font-size: 18px
+    &__nameBeer
+        margin-bottom:15px
+        border-bottom: 3px solid #EF9F1B
+        & > h3
+            letter-spacing: 2px
+            text-shadow: 1px 1px rgba(255,255,255,0.5)
+            font-family: 'Satisfy', cursive
+            margin-top: 1rem
+    &__background
+        margin: 0 1rem
+        & > span
+            align-content: flex-end
+        & > img
+            float: left
+            height: 21rem
+            margin: 1rem
+        & > ul
+            font-size: 18px
+            list-style: none
+            font-size: 18px
+    // &__ingredients
+    //     font-family: 'Crimson Text', serif
+    &__tips
+        & > img
+            height: 12rem
+            float: right
+            margin-top: 1rem
+    
+
+    
+@media screen and (min-width: 768px)
+
+.detail
+
+    font-size: 2rem
+    li
+        margin:0
+  
+    
+   
+
+        
+     
