--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
@@ -6,7 +6,7 @@
         flex-direction: row
         padding: 0.5rem
         border-bottom: 2px solid #EF9F1B
-        background-image: url(img/beer.jpg)
+        background-image: url(img/greendots.jpg)
         margin-top: 0.5rem
     &__logo
         width: 22%
