--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.sass
@@ -16,7 +16,10 @@ body
     width: 100vw
     height: 100vh
     background-color: #2c7873 
-
+ul
+    list-style: none
+li
+    list-style: none
 
 
 
