--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -123,7 +123,7 @@
   flex-direction: row;
   padding: 0.5rem;
   border-bottom: 2px solid #EF9F1B;
-  background-image: url(img/beer2.jpg);
+  background-image: url(img/greendots.jpg);
   margin-top: 0.5rem;
 }
 .search__logo {
@@ -205,10 +205,71 @@
 .detail {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-items: center;
   align-content: center;
   font-size: 1.5em;
   text-align: center;
+  background-color: #8ec5a6;
+  border-radius: 20px;
+  overflow: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 100vw;
+  font-family: "Indie Flower", cursive;
+}
+.detail h4 {
+  font-size: 23px;
+  font-family: "Satisfy", cursive;
+}
+.detail p {
+  font-size: 18px;
+}
+.detail span {
+  font-size: 18px;
+}
+.detail ul {
+  font-size: 20px;
+}
+.detail li {
+  font-size: 18px;
+}
+.detail__nameBeer {
+  margin-bottom: 15px;
+  border-bottom: 3px solid #EF9F1B;
+}
+.detail__nameBeer > h3 {
+  letter-spacing: 2px;
+  text-shadow: 1px 1px rgba(255, 255, 255, 0.5);
+  font-family: "Satisfy", cursive;
+  margin-top: 1rem;
+}
+.detail__background {
+  margin: 0 1rem;
+}
+.detail__background > span {
+  align-content: flex-end;
+}
+.detail__background > img {
+  float: left;
+  height: 21rem;
+  margin: 1rem;
+}
+.detail__background > ul {
+  font-size: 18px;
+  list-style: none;
+  font-size: 18px;
+}
+.detail__tips > img {
+  height: 12rem;
+  float: right;
+  margin-top: 1rem;
+}
+
+.detail {
+  font-size: 2rem;
+}
+.detail li {
+  margin: 0;
 }
 
 * {
@@ -223,6 +284,14 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: #2c7873;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
 }
 
 h2 {
