add changes to sass and css

--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/detail.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/detail.sass
@@ -8,13 +8,12 @@
     background-color: #8ec5a6
     border-radius: 20px
     overflow: none
-    margin-top: 0
-    margin-bottom:0
-    // margin-left: 1rem
-    // margin-rigth: 1rem
-    width: 100vw
+    margin-top: 4rem
+    margin-left: 1rem
+    margin-right: 1rem
+    margin-bottom: 1rem
     font-family: "Indie Flower", cursive
-
+    
     h4
         font-size: 23px
         font-family: 'Satisfy', cursive
@@ -23,11 +22,15 @@
     span
         font-size: 18px
     ul
-        font-size:20px
+        font-size: 20px
     li
+        margin-top: 1rem
+        margin-bottom: 1rem
+        margin-left: 1rem
+        margin-rigth: 1rem
         font-size: 18px
     &__nameBeer
-        margin-bottom:15px
+        margin-bottom: 15px
         border-bottom: 3px solid #EF9F1B
         & > h3
             letter-spacing: 2px
@@ -37,7 +40,7 @@
     &__background
         margin: 0 1rem
         & > span
-            align-content: flex-end
+            align-content: center
         & > img
             float: left
             height: 21rem
@@ -53,19 +56,11 @@
             height: 12rem
             float: right
             margin-top: 1rem
-    
 
-    
 @media screen and (min-width: 768px)
 
 .detail
 
     font-size: 2rem
     li
-        margin:0
-  
-    
-   
-
-        
-     
+        margin: 0
