--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
@@ -3,13 +3,14 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    height: 100vh
     background-color: #2c7873
     &__logo
         max-width: 18rem
         border-bottom: 2px solid #EF9F1B
         margin-top: 5rem
-        padding-bottom: 1rem
-        margin-bottom: 1rem
+        padding-bottom: 0.5rem
+        margin-bottom: 0.5rem
     
     &__title
         text-align: center
