--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -77,14 +77,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   background-color: #2c7873;
 }
 .register__logo {
   max-width: 18rem;
   border-bottom: 2px solid #EF9F1B;
   margin-top: 5rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .register__title {
   text-align: center;
@@ -117,9 +118,10 @@
 .search {
   display: flex;
   flex-direction: column;
+  font-family: "Satisfy", cursive;
   top: 0;
   position: sticky;
-  height: 10%;
+  height: 10vh;
   justify-content: space-between;
 }
 .search__userholder {
@@ -132,7 +134,8 @@
   flex-direction: row;
   padding-bottom: 2px;
   padding-right: 35px;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 .search__logo {
   width: 35%;
@@ -165,9 +168,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   padding-top: 0.5rem;
-  padding-bottom: 1rem;
-  height: 25px;
+  padding-bottom: 0.5rem;
+  height: 12vh;
   border-bottom: 2px solid #EF9F1B;
 }
 .search__hamburguer {
@@ -200,6 +204,23 @@
   font-size: 20px;
 }
 
+.item {
+  font-family: "Satisfy", cursive;
+  background-color: #8ec5a6;
+}
+.item h2 {
+  font-size: 2.4em;
+  font-weight: bold;
+}
+.item h3 {
+  font-size: 23px;
+}
+
+.results {
+  margin-top: 3rem;
+  font-family: "Satisfy", cursive;
+}
+
 @media only screen and (min-width: 600px) {
   .search {
     height: 15vh;
@@ -214,8 +235,8 @@
   .search__ranking {
     width: 20%;
     height: 90%;
-    margin-top: 2px;
-    padding-bottom: 20px;
+    margin-bottom: 1rem;
+    padding-bottom: 2px;
   }
   .search__look {
     margin-left: 200px;
@@ -311,9 +332,10 @@
   background-color: #8ec5a6;
   border-radius: 20px;
   overflow: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 100vw;
+  margin-top: 4rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   font-family: "Indie Flower", cursive;
 }
 .detail h4 {
@@ -330,6 +352,10 @@
   font-size: 20px;
 }
 .detail li {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  margin-rigth: 1rem;
   font-size: 18px;
 }
 .detail__nameBeer {
@@ -346,7 +372,7 @@
   margin: 0 1rem;
 }
 .detail__background > span {
-  align-content: flex-end;
+  align-content: center;
 }
 .detail__background > img {
   float: left;
@@ -372,7 +398,11 @@
 }
 
 * {
+  padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul {
@@ -393,7 +423,7 @@ li {
   list-style: none;
 }
 
-h2 {
+.login__title, .register__title {
   font-family: "Permanent Marker", cursive;
 }
 
