add changes to sass styles

--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/login.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/login.sass
@@ -34,3 +34,9 @@
         margin: 0.5rem auto
     &__login
         text-align: center
+
+    @media only screen and (min-width: 600px) 
+    
+    &__input, &__submit
+        width: 28%
+  
