--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/register.sass
@@ -35,3 +35,8 @@
         margin: 0.5rem auto
     &__login
         text-align: center
+
+    @media only screen and (min-width: 600px) 
+        
+    &__input, &__submit
+        width: 28%
