--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/search.sass
@@ -20,7 +20,7 @@
     &__logo
         width: 35%
         margin-left: 0.4rem
-        margin-top:0.5rem
+        margin-top: 0.5rem
     &__title
         margin-top: 1rem
         align-items: center
@@ -65,42 +65,53 @@
         border: 0
         background-color: transparent
         > i
-           background-color: transparent 
+            background-color: transparent
     .feedback
         color: #d45b46
         text-align: center
         font-size: 20px
-    
 
 .item
     font-family: 'Satisfy', cursive
     background-color: #8ec5a6
+    justify-content: center
+    align-items: center
     h2
         font-size: 2.4em
         font-weight: bold
+        align-items: center
+        padding: 1rem
+        width: 100%
     h3
         font-size: 23px
-    
+    span
+        font-size: 18px
+
 .results
     margin-top: 3rem
     font-family: 'Satisfy', cursive
 
-@media only screen and (min-width: 600px) 
+@media only screen and (min-width: 600px)
     .search
         height: 15vh
         margin-bottom: 20px
         &__logo
-            display: none
+            width: 20%
+            margin-left: 1rem
+            margin-top: 0.5rem
+        &__logoholder
+            align-items: center
+            width: 30%
         &__header
-            height: 5vh
+            height: 20vh
         &__ranking
             width: 20%
             height: 90%
             margin-bottom: 1rem
             padding-bottom: 2px
         &__look
+            align-items: center
             margin-left: 200px
-            margin-top: 10px
             font-size: 50px
         &__userholder
             display: flex
@@ -112,8 +123,9 @@
         &__menu
             height: 20vh
         & > i
+            display: flex
+            align-items: center
             font-size: 50px
         &__query
             height: 3vh
             width: 30vw
-            
