--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/style.css
@@ -71,6 +71,9 @@
 .login__login {
   text-align: center;
 }
+.login__input, .login__submit {
+  width: 28%;
+}
 
 .register {
   display: flex;
@@ -113,6 +116,9 @@
 }
 .register__login {
   text-align: center;
+}
+.register__input, .register__submit {
+  width: 28%;
 }
 
 .search {
@@ -207,13 +213,21 @@
 .item {
   font-family: "Satisfy", cursive;
   background-color: #8ec5a6;
+  justify-content: center;
+  align-items: center;
 }
 .item h2 {
   font-size: 2.4em;
   font-weight: bold;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
 }
 .item h3 {
   font-size: 23px;
+}
+.item span {
+  font-size: 18px;
 }
 
 .results {
@@ -227,10 +241,16 @@
     margin-bottom: 20px;
   }
   .search__logo {
-    display: none;
+    width: 20%;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+  }
+  .search__logoholder {
+    align-items: center;
+    width: 30%;
   }
   .search__header {
-    height: 5vh;
+    height: 20vh;
   }
   .search__ranking {
     width: 20%;
@@ -239,8 +259,8 @@
     padding-bottom: 2px;
   }
   .search__look {
+    align-items: center;
     margin-left: 200px;
-    margin-top: 10px;
     font-size: 50px;
   }
   .search__userholder {
@@ -256,6 +276,8 @@
     height: 20vh;
   }
   .search > i {
+    display: flex;
+    align-items: center;
     font-size: 50px;
   }
   .search__query {
